0.3-DEVEL - unreleased
======================

 * Removed default description text for upload fields for ATFile and ATImage. 
   They are superflouous and don't really add any help to the user. Quite obvious
   what the fields do/mean.

 * Fixed [ 1047878 ] For ical and vcal export, use action icons instead of tabs
   [tiran]

0.2.0-rc5 - unreleased
======================

 * Applied patch from [ 1104069 ] ATCT migration -- more ordering issues
   which fixes some more ordering issues
   [hahnfeld]

 * atct_topic_view now doesn't call getObject() anymore and is a small
   bit more performant. This also takes some burden from waking up objects.
   (Bug 1079030)
   [ctheune]

 * Made HTML the default content type for documents (and news items).
 * [ctheune]

 * Fixed [ 1080729 ] Wrong permissions for ATDocument.EditableText / setFormat
   [tiran]

 * Use StdoutStringIO in migration to be more verbose

 * Fixed atct_topcic_view: Make sure there is an object before referencing
   attributes. This can typically happen if there are problems with the
   AccessContentsInfo permission.
   [tesdal]

 * Removed support of Python 2.1 and 2.2 from INSTALL.txt. Some code like 
   migration requires new features of Python 2.3 like generators.
   [tiran]

 * Added note to INSTALL.txt that ATCT will soon drop support for Zope < 2.7.2.
   [tiran]


0.2.0-rc4 - 2004-11-30
======================

 * ATTopic: Adding the criterion type to the generated id, so you can sort and
   filter on the same field.
   [ctheune]

 * Fixed unit tests to work without (and hopefully with too) runner again
   [ctheune]

 * Added feature that doesn't show users non-sortable criterions in the form
   [ctheune]

 * Added feature that removes double or stupid criterions (allowedRolesAndUsers,
   id/getId)
   [ctheune]

 * Sorting criterion lists (by their translations)
   [ctheune]
 
 * Added german translation
   [ctheune]

 * More i18n support in the templates
   [ctheune]
